# opencvsharp

src/OpenCvSharp/Modules/features2d/: Feature2D.cs
src/OpenCvSharpExtern/: CMakeLists.txt
